# alik

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-release.yml  cargo-build.yml
src/: config.rs  discord_client.rs  event_handler.rs  main.rs  squad_server.rs
src/discord_client/commands/: helpers.rs  mod.rs  restart_server.rs  squad_server.rs  start_server.rs  stop_server.rs
