[package]
name = "alik"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
