[package]
name = "alik"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing = "0.1.37"
tracing-subscriber = "0.2"

[dependencies.tokio]
version = "1.0"
features = ["signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
